`java-runtime.min-version = 11` and `gradle-api.min-version = 7.0`